Syntax_files/Syntax_Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <app_name>
  labels:
    app: <app_name>
    tier: <frontend/backend>
    env: prod
spec:
  selector:
    matchLabels:
      app: <app_name>
  template:
    metadata:
      labels:
        app: <app_name>
    spec:
      containers:
        - name: <container_name>
          image: <image_name/tag>
          ports:
            - containerPort: <container_port>
