Syntax_files/Syntax_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: <service_name>
  namespace: default
  labels:
    app: <app_name>
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"                                #for creating NLB load balancer
    external-dns.alpha.kubernetes.io/hostname: nginx.highlyavailable.systems.      #for automatic R53 DNS creation
spec:
  selector:
    app: <app_name>
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: <container_port>


#More Options can be addded such as -
#Draining
#Logging
#SSL Certs
#Tagging
#Security groups
#Health checks
